fwb: Move statusbar tuner to revenge settings
Signed-off-by: Ethan Halsall <ethan.halsall@gmail.com>

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -347,7 +347,7 @@
                   android:theme="@style/ExTunerSettings"
                   android:label="@string/statusbar_items_title"
                   android:process=":tuner"
-                  android:parentActivityName="com.settings.fragments.StatusBarSettings"
+                  android:parentActivityName="com.settings.fragments.revengeos.StatusBarSettings"
                   android:exported="true">
         </activity>
 
